# EchoBird-wt

./: .gitignore  README.md  TRADEMARKS.md  package-lock.json  package.json
docs/: install.ps1
docs/api/model-directory/: index.json
docs/api/store/: models.json
docs/api/version/: index.json
docs/courses/: cn.json
docs/openrouter/: index.html
docs/pulse/: latest-24h.json  latest-7d-en.json  latest-7d.json
public/tools/: reversi.html  translator.html
scripts/: inject_pinned.py  pulse_pinned.json
scripts/wt-launcher/: EchoBirdWtLauncher.cs  README.md  build-wt-launchers.ps1
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/api/: parasite.ts  tauri.ts  types.ts
src/components/: RemoteModelSelector.tsx  Toast.tsx
src/i18n/: en.ts  ja.ts  types.ts  zh-Hans.ts  zh-Hant.ts
src/pages/AiCourses/: AiCourses.tsx
src/pages/AppManager/: AppManagerComponents.tsx
src/pages/MotherAgent/: MotherAgentMain.tsx  MotherAgentProvider.tsx  types.ts
src/pages/MyProjects/: MyProjects.tsx  MyProjectsPanel.tsx
src/stores/: myProjectsStore.ts
tools/claudecode/: paths.json
tools/codex/: paths.json
