[package]
name = "echobird"
version = "4.9.4"
description = "The Nexus for Models, Agents & Vibe Coding"
authors = ["Echobird Team"]
license = "AGPL-3.0-or-later"
repository = "https://echobird.ai/"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "echobird_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Closed-source core (private repository, fetched by Cargo at build time).
# Requires read access to github.com/edison7009/EchoBird-secret-.
# On Windows, set CARGO_NET_GIT_FETCH_WITH_CLI=true so Cargo uses git's
# credential helper (gh auth login provides the token); CI uses the
# ECHOBIRD_SECRET_DEPLOY_KEY Actions secret via webfactory/ssh-agent.
echobird_core = { git = "https://github.com/edison7009/EchoBird-secret-.git", branch = "main" }

# Only the public thin shell (src/lib.rs) directly uses `tauri` — for
# `tauri::generate_context!()`, which has to expand against this crate's
# CARGO_MANIFEST_DIR to find tauri.conf.json. Every other Tauri-related
# runtime dependency (plugins called at startup, services, commands) is
# declared by echobird_core.
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }

# Tauri plugins whose **permissions** are referenced from capabilities/
# *.json must be direct dependencies of the crate that runs tauri-build
# (this one), even when the runtime initialisation lives in
# echobird_core. tauri-build's permission validator only walks direct
# Cargo dependencies, not transitive ones.
tauri-plugin-shell = "2"
# Dialog plugin powers the native file picker in the "我的AI项目" Add
# dialog. Runtime init lives in echobird_core; this declaration exists
# so capabilities/default.json's `dialog:*` permissions resolve.
tauri-plugin-dialog = "2"
